# termociencais_relatorio_4

./: README.MD  compile.py  main.aux  pyproject.toml
src/: beamerthemeUfg.sty  compile.py  main.bib  main.tex  presentation.tex  settings.sty
src/pages/: 1_introducao.tex
src/pages/default/: 0_capa.tex
src/scripts/: dados exp4.ods  regressao.ipynb  tabela_experimento_pitot.tex  tabela_experimento_pitot2.tex
