[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termociencias-relatorio-4"
version = "0.1.0"
description = "Projeto de análise experimental do perfil de velocidades em túnel de vento (Tubo de Pitot + Arduino)."
readme = "README.md"
authors = [
    { name = "Alan Henrique Pereira Miranda" },
    { name = "Alexandro Aldo Lopes Osório" },
    { name = "Ana Monica Cardoso da Costa" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "odfpy>=1.4.1" # Necessário para o pandas ler arquivos .ods
]

[project.urls]
"Source Code" = "https://github.com/ahpqmiranda/termociencias_exp4_tubo_pitot.git"
